[metadata]
name = rfcutils
version = 0.0.1
author = manderj
author_email = joffrey.mander@gmail.com
license = Proprietary
description = 
keyword = rfc download search tools
url =
long_description = file: README.rst
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    click
    lxml
include_package_data = True
extra_requires =
  dev =
    black
    ipdb
    isort
    pylint
    pytest

[options.entry_points]
console_scripts =
    rfcdownloader = rfcutils.commands:download
    rfcsearch = rfcutils.commands:search
